--- a/.config/keepassxc/keepassxc.ini
+++ b/.config/keepassxc/keepassxc.ini
@@ -3,8 +3,10 @@ ConfigVersion=2
 MinimizeAfterUnlock=true
 
 [Browser]
+AlwaysAllowAccess=true
 CustomProxyLocation=
 Enabled=true
+MatchUrlScheme=true
 
 [FdoSecrets]
 ConfirmAccessItem=false
