--- a/.config/nvtop/interface.ini
+++ b/.config/nvtop/interface.ini
@@ -26,3 +26,21 @@ DisplayField = type
 DisplayField = gpuRate
 DisplayField = memory
 DisplayField = cmdline
+
+[Device]
+Pdev = 0000:01:00.0
+Monitor = true
+ShownInfo = gpuRate
+ShownInfo = gpuMemRate
+ShownInfo = temperature
+ShownInfo = fanSpeed
+
+
+[Device]
+Pdev = 0000:00:02.0
+Monitor = true
+ShownInfo = gpuRate
+ShownInfo = gpuMemRate
+ShownInfo = temperature
+ShownInfo = fanSpeed
+
